[package]
name = "bypass_tok"
version = "0.1.0"
edition = "2025"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
log = "0.4"
env_logger = "0.9"
tower = "0.4"
tokio-rustls = "0.23"
rustls = "0.20"
lazy_static = "1.4"
uuid = { version = "1", features = ["v4"] }
dashmap = "5.3"
